Refactor BuildHandler and rename GIFTING_BARRIER in View